--- a/style.css
+++ b/style.css
@@ -20,13 +20,8 @@
 body {
     background-image: url(images/bg-pattern-bottom-desktop.svg),url(images/bg-pattern-top-desktop.svg);
     background-repeat: no-repeat,no-repeat;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
     min-width: 100vw;
     padding:  1.5rem;
-    min-height: 100vh;
 }
 
 /* desktop viewport */
@@ -148,5 +143,57 @@ h1 {
 
 /* mobile viewport */
 @media (max-width: 885px) {
+    main {
+        max-width:375px;
+        padding-top: 4rem;
+    }
     
+    .top-section {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    header {
+        padding: 0 0 2.5rem 0;
+        width: 100%;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .rating {
+        width: 100%;
+    }
+
+    .rate {
+        flex-direction:column;
+        align-items: center;
+        margin-left: 0;
+    }
+
+    .rate:nth-of-type(1) {
+        transform: translateX(0);
+    }
+    
+    .rate:nth-of-type(2) {
+        transform: translateX(0);
+    }
+
+    .rate p {
+        margin: 0;
+    }
+
+    .customer {
+        flex-direction: column;
+        margin-top: 3rem;
+    }
+    
+    .each-buyer {
+        width: 100%;
+    }
+
+    .each-buyer:nth-of-type(3) {
+        margin-bottom: 3rem;
+    }
 }
