--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h1 {
 
 
 /* mobile viewport */
-@media (max-width: 885px) {
+@media (max-width: 375px) {
     main {
         max-width:375px;
         padding-top: 4rem;
@@ -197,3 +197,13 @@ h1 {
         margin-bottom: 3rem;
     }
 }
+
+@media (max-width: 885px) {
+    .rate {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .rate p {
+        margin: 0;
+    }
